
* Fix a bug causing pip to not select a wheel compiled against an OSX SDK later
  than what Python itself was compiled against when running on a newer version
  of OSX.

* Add a new ``--prefix`` option for ``pip install`` that supports wheels and
  sdists. (:pull:`3252`)

* Fixed :issue:`2042` regarding wheel building with setup.py using a different
  encoding than the system.


**7.1.2 (2015-08-22)**

* Don't raise an error if pip is not installed when checking for the latest pip
  version.


**7.1.1 (2015-08-20)**

* Check that the wheel cache directory is writable before we attempt to write
  cached files to them.

* Move the pip version check until *after* any installs have been performed,
  thus removing the extraenous warning when upgrading pip.

* Added debug logging when using a cached wheel.

* Respect platlib by default on platforms that have it separated from purlib.

* Upgrade packaging to 15.3.

  * Normalize post-release spellings for rev/r prefixes.

* Upgrade distlib to 0.2.1.

  * Updated launchers to decode shebangs using UTF-8. This allows non-ASCII
    pathnames to be correctly handled.

  * Ensured that the executable written to shebangs is normcased.

  * Changed ScriptMaker to work better under Jython.

* Upgrade ipaddress to 1.0.13.


**7.1.0 (2015-06-30)**

* Allow constraining versions globally without having to know exactly what will
  be installed by the pip command. :issue:`2731`.

* Accept --no-binary and --only-binary via pip.conf. :issue:`2867`.

* Allow ``--allow-all-external`` within a requirements file.

* Fixed an issue where ``--user`` could not be used when ``--prefix`` was used
  in a distutils configuration file.

* Fixed an issue where the SOABI tags were not correctly being generated on
  Python 3.5.

* Fixed an issue where we were advising windows users to upgrade by directly
  executing pip, when that would always fail on Windows.

* Allow ``~`` to be expanded within a cache directory in all situations.

